Updated code base to be compatible with the final FF API in Java22